# qhawarina

./: .env.example  .gitignore  FORECASTS_IMPLEMENTATION.md  MODEL_PAPER.md  PIPELINE.md  PROYECTO_COMPLETO_ESTADO.md  SUPERMARKET_IMPLEMENTATION_SUMMARY.md  UI_FORECASTS_UPDATE.md  demo_simulators_output.json  estructura_ponderaciones_ipc_lima_dic2021.csv  mar_audit.csv  policy_questions_output.txt  policy_scenarios_test.json  pyproject.toml
config/: discovered_series.json  enaho_modules.yaml  inflation_components_catalog.yaml  political_sources.yaml  poverty_proxies.yaml  publication_lags.yaml  regional_series_catalog.yaml  rss_feeds.yaml  sectoral_production_catalog.yaml  series_catalog.yaml  settings.py
data/: pipeline_status.json
docs/: COUNTERFACTUAL_ANALYSIS.md  CPI_WEIGHTS_VERIFICATION.md  GRANULAR_POLICY_ANSWERS.md  NEXTJS_SETUP_GUIDE.md  NEXTJS_STARTER_EXAMPLE.tsx  POLICY_SIMULATORS.md  PROFESSIONAL_STRUCTURE_IMPLEMENTED.md  QHAWARINA_IMPLEMENTATION_ROADMAP.md  QHAWARINA_INTERACTIVE_FEATURES.md  QHAWARINA_PROFESSIONAL_STRUCTURE.md  QHAWARINA_WEBSITE_DESIGN.md  QUICK_START_CHECKLIST.md  WEB_CALCULATORS_COMPLETE.md  WEB_INTERFACE_COMPLETE.md  political_index_plan.md
estimation/: full_audit_output.txt
paper/: audit_results.json  audit_results_econ.json  compute_google_trends.py  compute_paper_stats.py  compute_paper_tables.py  compute_validations.py  generate_figures.py  google_trends_irp.csv  irp_ire_paper.aux  irp_ire_paper.bbl  irp_ire_paper.blg  irp_ire_paper.out  irp_ire_paper.tex  macro_refs.bib  macro_transmission_peru.aux  macro_transmission_peru.bbl  (+29 more)
(+291 files in other folders)
